6798062: Memory Leak on using getFiles of FileSystemView

Reviewed-by: peterz, malenkov